# Bisection-method

Bisection method/: Bisection-method.cabal  CHANGELOG.md  README.md
Bisection method/app/: Logic.hs  Main.hs
Bisection method/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
