cabal-version:      2.4
name:               Bisection-method
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Zdexces
maintainer:         av.mikael@mail.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
                    

executable Bisection-method
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Logic

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      easyplot ^>=1.0,
                      textPlot
    hs-source-dirs:   app
    default-language: Haskell2010
